--- a/aula001.html
+++ b/aula001.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
     <style>
         :root {
             --fonte-principal: 'Bricolage Grotesque', sans-serif;
