--- a/aula003.html
+++ b/aula003.html
@@ -19,6 +19,17 @@
 <body>
     <div class="container">
         <main>
+            <h2>Saída de informações</h2>
+            <p>Imagine um programa sem saídas, por exemplo, uma calculadora. Imagine que você forneça a operação que
+                você
+                quer realizar, como 5 + 4 e a calculadora simplesmente não te responde, em outras palavras, não te dá
+                uma
+                saída. Isso não seria uma calculadora, certo? Não seria de nenhuma utilidade, pois eu não consegui ver o
+                resultado
+                dessa operação. É exatamente essa a saída que vamos ver, elas são fundamentais em programas.</p>
+            <h3>Seu primeiro código</h3>
+            <p>Digite print() e dentro dos parênteses, escreva um texto cercado por aspas (podem ser simples ou duplas),
+                como esse:</p>
             <div class="example-code-container">
                 <div class="example-code-header">
                     <div class="dots">
@@ -28,13 +39,38 @@
                     </div>
                     <span>comentarios.py</span>
                 </div>
-                <pre class="example-pre"><code>Comandos aqui
-</code></pre>
+                <pre class="example-pre"><code>print("Olá, Mundo!")</code></pre>
                 <div class="example-output-container">
                     <div class="example-output-header">Saída:</div>
-                    <div class="output">Erro! Explicação: "Mas se eu utilizar" não é um comando do python</div>
+                    <div class="output">Olá, Mundo!</div>
                 </div>
             </div>
+
+
+            <br>
+            Isso produzirá uma saída. O interpretador (executador) do python executará esse print e mostrará na tela
+            Olá, Mundo! Legal, né?? No mundo da programação, quando utilizamos o comando print(), dizemos que estamos
+            imprimindo algo. Vamos imprimir mais coisas!
+            print('Meu nome é Pedro')
+            print('Eu tenho 23 anos')
+            Um lembrete: Sempre que você executar um comando, digite um abaixo do outro, pulando uma linha.
+            print('Gosto da natureza e dos animais')
+
+            podemos utilizar o comando print() e ainda pode haver comentários após ele. Vamos ver um exemplo:
+            print('Exemplo') # Esse comentário não será executado, mas o comando print sim.
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
