--- a/aula002.html
+++ b/aula002.html
@@ -10,8 +10,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/theme/dracula.min.css">
     <link rel="stylesheet" href="css/aulas.css">
     <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
 </head>
@@ -23,13 +21,12 @@
             <p>Olá! Está preparado(a) para ver alguns termos inicias da linguagem? Vamos conhecer alguns assuntos
                 essenciais antes de mergulhar a fundo no python. Que tal começarmos a falar de comentários?</p>
             <h2>Comentários</h2>
-            <p>Os comentários em python são partes de códigos onde os comandos não são executados, ou seja, o
-                programa simplesmente ignora os comentários. Para fazer um comentário, utiliza-se o hashtag (#), e logo
-                após isso você pode escrever o que quiser que o programa não executará. Importante lembrar que os
-                comentários só funcionam em uma linha. Ou seja, se você quiser colocar mais comentários, a cada linha
-                terá que digitar o hashtag (#). Os comentários são
-                muito úteis explicações de comandos. Vamos ver alguns exemplos de comentário:
-            </p>
+            <p>Os comentários em python são partes de códigos onde os comandos não são executados, ou seja, o programa
+                simplesmente ignora os comentários. Para fazer um comentário, utiliza-se o hashtag (#), e logo após isso
+                você pode escrever o que quiser que o programa não executará. Importante lembrar que os comentários só
+                funcionam em uma linha. Ou seja, se você quiser colocar mais comentários, a cada linha terá que digitar
+                o hashtag (#). Os comentários são muito úteis explicações de comandos. Vamos ver alguns exemplos de
+                comentário:</p>
             <div class="example-code-container">
                 <div class="example-code-header">
                     <div class="dots">
@@ -87,25 +84,17 @@ Mas se eu utilizar # o hashtag após o texto que que queria, dará um erro. Todo
                 podem ser considerados comandos em Python. Aprenderemos isso nas aulas adiantes.</p>
             <p>Agora você já está preparado para escrever seus primeiros programas. Vamos nessa!</p>
 
-
-            <button id="start" onclick="location.href='aula003.html'">Próxima aula</button>
+            <div class="button-container">
+                <button id="left-button" class="nav-button" onclick="location.href='aula001.html'">Aula anterior</button>
+                <button id="center-button" class="nav-button" onclick="location.href='bot.html'">Área de Testes</button>
+                <button id="right-button" class="nav-button" onclick="location.href='aula003.html'">Próxima Aula</button>
+            </div>
         </main>
     </div>
+
     <button id="toggle-theme">🌙</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/python/python.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/matchbrackets.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/closebrackets.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-
     <script>
-        let pyodide, editor;
-
-        const runBtn = document.getElementById("run-btn");
-        const clearBtn = document.getElementById("clear-btn");
-        const outputEl = document.getElementById("saida");
-        const spinner = document.getElementById("spinner");
         const toggleButton = document.getElementById('toggle-theme');
         let isDark = true;
 
@@ -127,117 +116,9 @@ Mas se eu utilizar # o hashtag após o texto que que queria, dará um erro. Todo
             root.style.setProperty('--text-example', isDark ? 'var(--clr-example-text-dark)' : 'var(--clr-example-text-light)');
 
             toggleButton.textContent = isDark ? '☀️' : '🌙';
-
-            if (editor) {
-                editor.setOption("theme", isDark ? "dracula" : "default");
-            }
         }
 
-        async function iniciar() {
-            outputEl.textContent = "Carregando o interpretador Python...";
-            try {
-                pyodide = await loadPyodide({
-                    indexURL: "https://cdn.jsdelivr.net/pyodide/v0.23.4/full/",
-                    stdout: msg => {
-                        outputEl.textContent += msg;
-                        outputEl.scrollTop = outputEl.scrollHeight;
-                    },
-                    stderr: msg => {
-                        outputEl.textContent += msg;
-                        outputEl.scrollTop = outputEl.scrollHeight;
-                    }
-                });
-
-                editor = CodeMirror.fromTextArea(document.getElementById("python-editor"), {
-                    mode: "python",
-                    lineNumbers: true,
-                    indentUnit: 4,
-                    tabSize: 4,
-                    theme: isDark ? "dracula" : "default",
-                    smartIndent: true,
-                    matchBrackets: true,
-                    autoCloseBrackets: true,
-                    extraKeys: {
-                        "Ctrl-Enter": () => executarCodigo()
-                    }
-                });
-
-                outputEl.textContent = "Pronto! Digite seu código e clique em Executar ou pressione Ctrl+Enter";
-                outputEl.className = "success";
-                runBtn.disabled = false;
-                clearBtn.disabled = false;
-            } catch (err) {
-                outputEl.textContent = `Falha ao carregar o interpretador: ${err.message}`;
-                outputEl.className = "error";
-            }
-        }
-
-        function limparErros() {
-            if (editor) {
-                editor.eachLine(line => editor.removeLineClass(line, "background", "erro-linha"));
-            }
-        }
-
-        async function executarCodigo() {
-            limparErros();
-            outputEl.textContent = "";
-            outputEl.className = "";
-            runBtn.disabled = true;
-            clearBtn.disabled = true;
-            spinner.style.display = "inline";
-
-            try {
-                await pyodide.runPythonAsync(
-                    `import sys, io
-sys.stdout = io.StringIO()
-sys.stderr = sys.stdout`
-                );
-
-                const execPromise = pyodide.runPythonAsync(editor.getValue());
-                const timeout = new Promise((_, reject) => setTimeout(() => {
-                    reject(new Error('Tempo de execução excedido (5 segundos)'));
-                }, 5000));
-
-                await Promise.race([execPromise, timeout]);
-
-                const out = await pyodide.runPythonAsync('sys.stdout.getvalue()');
-                if (out) {
-                    outputEl.textContent = out;
-                } else {
-                    outputEl.textContent = "Executado com sucesso (sem saída)";
-                    outputEl.className = "success";
-                }
-            } catch (err) {
-                outputEl.textContent = `Erro: ${err.message}`;
-                outputEl.className = "error";
-
-                const lineMatch = err.message.match(/line (\d+)/);
-                const tracebackMatch = err.message.match(/File "<exec>", line (\d+)/);
-                const errorLine = lineMatch ? parseInt(lineMatch[1]) :
-                    tracebackMatch ? parseInt(tracebackMatch[1]) : null;
-
-                if (errorLine && editor) {
-                    editor.addLineClass(errorLine - 1, "background", "erro-linha");
-                    editor.scrollIntoView({ line: errorLine - 1, ch: 0 }, 100);
-                }
-            } finally {
-                runBtn.disabled = false;
-                clearBtn.disabled = false;
-                spinner.style.display = "none";
-            }
-        }
-
-        function limparSaida() {
-            outputEl.textContent = "";
-            outputEl.className = "";
-            limparErros();
-        }
-
-        runBtn.addEventListener("click", executarCodigo);
-        clearBtn.addEventListener("click", limparSaida);
         toggleButton.addEventListener('click', toggleTheme);
-
-        iniciar();
     </script>
 </body>
 
