--- a/aula003.html
+++ b/aula003.html
@@ -10,8 +10,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/theme/dracula.min.css">
     <link rel="stylesheet" href="css/aulas.css">
     <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
 </head>
@@ -46,78 +44,58 @@
                 </div>
             </div>
 
-
             <br>
-            Isso produzirá uma saída. O interpretador (executador) do python executará esse print e mostrará na tela
-            Olá, Mundo! Legal, né?? No mundo da programação, quando utilizamos o comando print(), dizemos que estamos
-            imprimindo algo. Vamos imprimir mais coisas!
-            print('Meu nome é Pedro')
-            print('Eu tenho 23 anos')
-            Um lembrete: Sempre que você executar um comando, digite um abaixo do outro, pulando uma linha.
-            print('Gosto da natureza e dos animais')
+            <p>Isso produzirá uma saída. O interpretador (executador) do python executará esse print e mostrará na tela
+                Olá, Mundo! Legal, né?? No mundo da programação, quando utilizamos o comando print(), dizemos que
+                estamos
+                imprimindo algo. Vamos imprimir mais coisas!</p>
 
-            podemos utilizar o comando print() e ainda pode haver comentários após ele. Vamos ver um exemplo:
-            print('Exemplo') # Esse comentário não será executado, mas o comando print sim.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <!-- EDITOR -->
-            <div class="editor-container">
-                <div class="code-header">
+            <div class="example-code-container">
+                <div class="example-code-header">
                     <div class="dots">
                         <div class="dot red"></div>
                         <div class="dot yellow"></div>
                         <div class="dot green"></div>
                     </div>
-                    <span>main.py</span>
+                    <span>exemplo.py</span>
                 </div>
-                <textarea id="python-editor"># Digite o seu código aqui
-print("Olá, Mundo!")</textarea>
+                <pre class="example-pre"><code>print('Meu nome é Pedro')
+print('Eu tenho 23 anos')
+print('Gosto da natureza e dos animais')</code></pre>
+                <div class="example-output-container">
+                    <div class="example-output-header">Saída:</div>
+                    <div class="output">Meu nome é Pedro<br>Eu tenho 23 anos<br>Gosto da natureza e dos animais</div>
+                </div>
+            </div>
+
+            <p>Podemos utilizar o comando print() com comentários após ele. Vamos ver um exemplo:</p>
+
+            <div class="example-code-container">
+                <div class="example-code-header">
+                    <div class="dots">
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
+                    </div>
+                    <span>comentarios.py</span>
+                </div>
+                <pre class="example-pre"><code>print('Exemplo') # Este comentário não será executado</code></pre>
+                <div class="example-output-container">
+                    <div class="example-output-header">Saída:</div>
+                    <div class="output">Exemplo</div>
+                </div>
             </div>
 
             <div class="button-container">
-                <button id="run-btn" class="interpreter-btn" disabled>Executar (Ctrl+Enter)</button>
-                <button id="clear-btn" class="interpreter-btn" disabled>Limpar Saída</button>
-                <span id="spinner">⏳ Executando...</span>
+                <button id="left-button" class="nav-button" onclick="location.href='aula002.html'">Aula anterior</button>
+                <button id="center-button" class="nav-button" onclick="location.href='bot.html'">Área de Testes</button>
+                <button id="right-button" class="nav-button" onclick="location.href='aula004.html'">Próxima Aula</button>
             </div>
-
-            <div class="output-container">
-                <pre id="saida">Carregando interpretador Python...</pre>
-            </div>
-
-            <button id="start" onclick="location.href='aula003.html'">Próxima aula</button>
         </main>
     </div>
     <button id="toggle-theme">🌙</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/python/python.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/matchbrackets.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/addon/edit/closebrackets.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-
     <script>
-        let pyodide, editor;
-
-        const runBtn = document.getElementById("run-btn");
-        const clearBtn = document.getElementById("clear-btn");
-        const outputEl = document.getElementById("saida");
-        const spinner = document.getElementById("spinner");
         const toggleButton = document.getElementById('toggle-theme');
         let isDark = true;
 
@@ -139,117 +117,9 @@ print("Olá, Mundo!")</textarea>
             root.style.setProperty('--text-example', isDark ? 'var(--clr-example-text-dark)' : 'var(--clr-example-text-light)');
 
             toggleButton.textContent = isDark ? '☀️' : '🌙';
-
-            if (editor) {
-                editor.setOption("theme", isDark ? "dracula" : "default");
-            }
         }
 
-        async function iniciar() {
-            outputEl.textContent = "Carregando o interpretador Python...";
-            try {
-                pyodide = await loadPyodide({
-                    indexURL: "https://cdn.jsdelivr.net/pyodide/v0.23.4/full/",
-                    stdout: msg => {
-                        outputEl.textContent += msg;
-                        outputEl.scrollTop = outputEl.scrollHeight;
-                    },
-                    stderr: msg => {
-                        outputEl.textContent += msg;
-                        outputEl.scrollTop = outputEl.scrollHeight;
-                    }
-                });
-
-                editor = CodeMirror.fromTextArea(document.getElementById("python-editor"), {
-                    mode: "python",
-                    lineNumbers: true,
-                    indentUnit: 4,
-                    tabSize: 4,
-                    theme: isDark ? "dracula" : "default",
-                    smartIndent: true,
-                    matchBrackets: true,
-                    autoCloseBrackets: true,
-                    extraKeys: {
-                        "Ctrl-Enter": () => executarCodigo()
-                    }
-                });
-
-                outputEl.textContent = "Pronto! Digite seu código e clique em Executar ou pressione Ctrl+Enter";
-                outputEl.className = "success";
-                runBtn.disabled = false;
-                clearBtn.disabled = false;
-            } catch (err) {
-                outputEl.textContent = `Falha ao carregar o interpretador: ${err.message}`;
-                outputEl.className = "error";
-            }
-        }
-
-        function limparErros() {
-            if (editor) {
-                editor.eachLine(line => editor.removeLineClass(line, "background", "erro-linha"));
-            }
-        }
-
-        async function executarCodigo() {
-            limparErros();
-            outputEl.textContent = "";
-            outputEl.className = "";
-            runBtn.disabled = true;
-            clearBtn.disabled = true;
-            spinner.style.display = "inline";
-
-            try {
-                await pyodide.runPythonAsync(
-                    `import sys, io
-sys.stdout = io.StringIO()
-sys.stderr = sys.stdout`
-                );
-
-                const execPromise = pyodide.runPythonAsync(editor.getValue());
-                const timeout = new Promise((_, reject) => setTimeout(() => {
-                    reject(new Error('Tempo de execução excedido (5 segundos)'));
-                }, 5000));
-
-                await Promise.race([execPromise, timeout]);
-
-                const out = await pyodide.runPythonAsync('sys.stdout.getvalue()');
-                if (out) {
-                    outputEl.textContent = out;
-                } else {
-                    outputEl.textContent = "Executado com sucesso (sem saída)";
-                    outputEl.className = "success";
-                }
-            } catch (err) {
-                outputEl.textContent = `Erro: ${err.message}`;
-                outputEl.className = "error";
-
-                const lineMatch = err.message.match(/line (\d+)/);
-                const tracebackMatch = err.message.match(/File "<exec>", line (\d+)/);
-                const errorLine = lineMatch ? parseInt(lineMatch[1]) :
-                    tracebackMatch ? parseInt(tracebackMatch[1]) : null;
-
-                if (errorLine && editor) {
-                    editor.addLineClass(errorLine - 1, "background", "erro-linha");
-                    editor.scrollIntoView({ line: errorLine - 1, ch: 0 }, 100);
-                }
-            } finally {
-                runBtn.disabled = false;
-                clearBtn.disabled = false;
-                spinner.style.display = "none";
-            }
-        }
-
-        function limparSaida() {
-            outputEl.textContent = "";
-            outputEl.className = "";
-            limparErros();
-        }
-
-        runBtn.addEventListener("click", executarCodigo);
-        clearBtn.addEventListener("click", limparSaida);
         toggleButton.addEventListener('click', toggleTheme);
-
-        iniciar();
     </script>
 </body>
 
