updated python design

--- a/aula002.html
+++ b/aula002.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+    <header>
+        <h1 style="margin: 0;"><a href="index.html" style="text-decoration: none; color: currentColor;">Curso de Python</a></h1>
+        <span style="font-size: 1.2em; font-weight: bold;">Aula 2 - Termos Iniciais</span>
+    </header>
+
     <div class="container">
         <main>
             <h1>Termos Inicias</h1>
@@ -85,9 +90,11 @@ Mas se eu utilizar # o hashtag após o texto que que queria, dará um erro. Todo
             <p>Agora você já está preparado para escrever seus primeiros programas. Vamos nessa!</p>
 
             <div class="button-container">
-                <button id="left-button" class="nav-button" onclick="location.href='aula001.html'">Aula anterior</button>
+                <button id="left-button" class="nav-button" onclick="location.href='aula001.html'">Aula
+                    anterior</button>
                 <button id="center-button" class="nav-button" onclick="location.href='bot.html'">Área de Testes</button>
-                <button id="right-button" class="nav-button" onclick="location.href='aula003.html'">Próxima Aula</button>
+                <button id="right-button" class="nav-button" onclick="location.href='aula003.html'">Próxima
+                    Aula</button>
             </div>
         </main>
     </div>
