--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 <body>
     <header>
-        <h1><a href="https://www.python.org/">Curso de Python</a></h1>
+        <h1><a href="https://www.python.org/" target="_blank">Curso de Python</a></h1>
         <menu></menu>
     </header>
     <div class="container">
