--- a/aula001.html
+++ b/aula001.html
@@ -46,57 +46,6 @@
             --border-color: var(--clr-border-dark);
         }
 
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: var(--bg-body);
-            color: var(--text-color);
-            font-family: var(--fonte-principal);
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header {
-            background-color: var(--bg-header);
-            color: var(--text-color);
-            padding: 10px 20px;
-            flex-shrink: 0;
-        }
-
-        .container {
-            display: flex;
-            flex: 1;
-            padding: 10px;
-            flex-wrap: wrap;
-            max-width: 960px;
-            margin: 40px auto;
-            background-color: var(--bg-main);
-            border-radius: 16px;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-        }
-
-        main {
-            background-color: var(--bg-main);
-            padding: 20px;
-            line-height: 1.6;
-            flex: 1;
-            min-width: 300px;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 18px;
-            margin-bottom: 30px;
-        }
 
         .video-container {
             background-color: var(--bg-aside);
@@ -117,28 +66,6 @@
             font-family: monospace;
         }
 
-        .dots {
-            display: flex;
-            gap: 6px;
-        }
-
-        .dot {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-        }
-
-        .dot.red {
-            background-color: #ff5f56;
-        }
-
-        .dot.yellow {
-            background-color: #ffbd2e;
-        }
-
-        .dot.green {
-            background-color: #27c93f;
-        }
 
         iframe {
             width: 100%;
@@ -146,62 +73,6 @@
             border: none;
         }
 
-        #toggle-theme {
-            position: fixed;
-            top: 10px;
-            right: 20px;
-            background: none;
-            border: none;
-            font-size: 1.5em;
-            cursor: pointer;
-            transition: transform 0.2s;
-            z-index: 1000;
-        }
-
-        #toggle-theme:hover {
-            transform: scale(1.25);
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 40px 0 20px;
-            gap: 10px;
-        }
-
-        .nav-button {
-            display: flex;
-            align-items: center;
-            padding: 15px 25px;
-            background-color: var(--button-color);
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2em;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            max-width: 200px;
-            justify-content: center;
-        }
-
-        .nav-button:hover {
-            background-color: var(--hover-color);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        #left-button::after,
-        #right-button::after {
-            margin-left: 10px;
-        }
-
-        #center-button {
-            flex-grow: 1;
-            max-width: 300px;
-        }
 
         @media (max-width: 768px) {
             .container {
@@ -211,20 +82,6 @@
 
             iframe {
                 height: 300px;
-            }
-
-            .button-container {
-                flex-direction: column;
-                align-items: stretch;
-            }
-
-            .nav-button {
-                max-width: 100%;
-                margin: 10px 0;
-            }
-
-            #center-button {
-                max-width: 100%;
             }
         }
 
@@ -237,22 +94,23 @@
                 font-size: 1em;
             }
 
-            .nav-button {
-                padding: 12px 20px;
-                font-size: 1em;
-            }
-        }
-    </style>
+            }    </style>
 </head>
 
 <body>
+        <header>
+        <h1 style="margin: 0;"><a href="index.html" style="text-decoration: none; color: currentColor;">Curso de Python</a></h1>
+        <span style="font-size: 1.2em; font-weight: bold;">Aula 1 - Instalação</span>
+    </header>
+
     <div class="container">
+        
         <main>
             <h1>Boas vindas ao curso!</h1>
             <p>Olá! Seja muito bem vindo(a) neste curso de python! Explicarei de uma forma simples e divertida com o
                 objetivo de te ensinar a programar em Python!</p>
             <h1>Instalação</h1>
-            <p>Para começar a nossa jornada, vamos fazer a instalação do Python e do VSCode. Assista a esse vídeo:</p>
+            <p>Para começar a nossa jornada, vamos fazer a instalação do Python e do VSCode. Assista a esse vídeo:</p> <br>
 
             <div class="video-container">
                 <div class="video-header">
