--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="imagens/logopython.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logopython.png" type="image/x-icon">
     <title>Curso de Python</title>
     <style>
         :root {
@@ -232,14 +232,14 @@
         <main>
             <h1>Uma breve apresentação sobre Python</h1>
             <h2>O que é o Python?</h2>
-            <img src="imagens/python.png" alt="Imagem Python" title="Python" class="img">
+            <img src="assets/python.png" alt="Imagem Python" title="Python" class="img">
             <p class="p-text">Python é uma linguagem de programação amada por diversos profissionais de tecnologia pela sua
                 sintaxe, que é
                 relativamente mais simples do que a de outras linguagens. Foi inventada por Guido van Rossum em 1991,
                 enquanto trabalhava em Holanda. Guido achava as linguagens da época mais complexas, e aí que veio a ideia
                 brilhante de criar sua própria linguagem que é uma das mais usadas nos dias de hoje.</p>
 
-            <img src="imagens/piton.png" alt="Cobra Píton" title="Píton" class="img2">
+            <img src="assets/piton.png" alt="Cobra Píton" title="Píton" class="img2">
             <p class="p-text">Python tem um significado, e muitos pensam que vem da cobra 'píton' (python em inglês), porém
                 Guido fez uma homenagem ao grupo britânico de comédia <strong>Monty Python</strong>, pois admirava.
                 Python apresenta as seguintes características:</p>
