--- a/aula002.html
+++ b/aula002.html
@@ -16,7 +16,8 @@
 
 <body>
     <header>
-        <h1 style="margin: 0;"><a href="index.html" style="text-decoration: none; color: currentColor;">Curso de Python</a></h1>
+        <h1 style="margin: 0;"><a href="index.html" style="text-decoration: none; color: currentColor;">Curso de
+                Python</a></h1>
         <span style="font-size: 1.2em; font-weight: bold;">Aula 2 - Termos Iniciais</span>
     </header>
 
@@ -101,32 +102,7 @@ Mas se eu utilizar # o hashtag após o texto que que queria, dará um erro. Todo
 
     <button id="toggle-theme">🌙</button>
 
-    <script>
-        const toggleButton = document.getElementById('toggle-theme');
-        let isDark = true;
-
-        function toggleTheme() {
-            const root = document.documentElement;
-            isDark = !isDark;
-
-            root.style.setProperty('--bg-body', isDark ? 'var(--clr-editor-dark)' : 'var(--clr-editor-light)');
-            root.style.setProperty('--bg-main', isDark ? 'var(--clr-example-bg-dark)' : 'var(--clr-example-bg-light)');
-            root.style.setProperty('--text-color', isDark ? 'var(--clr-text-dark)' : 'var(--clr-text-light)');
-            root.style.setProperty('--hover-color', isDark ? 'var(--clr-hover-dark)' : 'var(--clr-hover-light)');
-            root.style.setProperty('--button-color', isDark ? 'var(--clr-button-dark)' : 'var(--clr-button-light)');
-            root.style.setProperty('--border-color', isDark ? 'var(--clr-border-dark)' : 'var(--clr-border-light)');
-            root.style.setProperty('--bg-editor', isDark ? 'var(--clr-editor-dark)' : 'var(--clr-editor-light)');
-            root.style.setProperty('--bg-editor-header', isDark ? 'var(--clr-editor-header-dark)' : 'var(--clr-editor-header-light)');
-            root.style.setProperty('--bg-dots', isDark ? 'var(--clr-dots-dark)' : 'var(--clr-dots-light)');
-            root.style.setProperty('--bg-example', isDark ? 'var(--clr-example-bg-dark)' : 'var(--clr-example-bg-light)');
-            root.style.setProperty('--bg-example-header', isDark ? 'var(--clr-example-header-dark)' : 'var(--clr-example-header-light)');
-            root.style.setProperty('--text-example', isDark ? 'var(--clr-example-text-dark)' : 'var(--clr-example-text-light)');
-
-            toggleButton.textContent = isDark ? '☀️' : '🌙';
-        }
-
-        toggleButton.addEventListener('click', toggleTheme);
-    </script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
