--- a/aula004.html
+++ b/aula004.html
@@ -33,7 +33,7 @@
                         <div class="dot yellow"></div>
                         <div class="dot green"></div>
                     </div>
-                    <span>comentarios.py</span>
+                    <span>variaveis.py</span>
                 </div>
                 <pre
                     class="example-pre"><code>nome = 'Maria' # A variável nome é uma string<br>idade = 17 # A variável idade é um número do tipo inteiro</code></pre>
@@ -44,25 +44,86 @@
             </div>
 
             <p>Mas espera... O que são strings?? O que é tipo inteiro?</p>
-            <p>Para entender melhor isso, antes de entender as variáveis, precisamos entender o que são tipos de dados, pois sem isso você dificilmente compreenderá o que são as próprias variáveis. Vamos avançar em direção aos TIPOS DE DADOS para entender como criar variáveis claramente</p>
+            <p>Para entender melhor isso, antes de entender as variáveis, precisamos entender o que são tipos de dados,
+                pois sem isso você dificilmente compreenderá o que são as próprias variáveis. Vamos avançar em direção
+                aos TIPOS DE DADOS para entender como criar variáveis claramente</p>
 
-        <h1>Tipos de dados</h1>
-        <p>Os tipos de dados representam qual o tipo de valor de uma variável. A <mean title="Sintaxe: significa a forma de como é escrito um comando">sintaxe</mean> básica de uma variável é a seguinte:
-            # nome_da_variavel = 'tipo de dado'
-            # Vamos conhecer os tipos de dados para compreender melhor.</p>
+            <h1>Tipos de dados</h1>
+            <p>Os tipos de dados representam qual o tipo de valor de uma variável. A <mean
+                    title="Sintaxe: significa a forma de como é escrito um comando">sintaxe</mean> básica de uma
+                variável é a seguinte:</p>
+            <div class="example-code-container">
+                <div class="example-code-header">
+                    <div class="dots">
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
+                    </div>
+                    <span>sintaxe.py</span>
+                </div>
+                <pre class="example-pre"><code>nome_da_variavel = 'tipo de dado'</code></pre>
+                <div class="example-output-container">
+                    <div class="example-output-header">Saída:</div>
+                    <div class="output">Nenhuma</div>
+                </div>
+            </div>
 
-            # string ou caractere (str): A string é todo texto delimitado por aspas, sejam elas simples ('') ou
-            duplas (""). Seja lá o que for, desde que esteja entre aspas então é uma string. Vamos ver alguns
-            exemplos:
-            nome = 'Lucas'
-            estado = "São Paulo"
-            continente = 'América'
+            <p>Vamos conhecer os tipos de dados para compreender melhor.</p>
+            <h2>Conhecendo os tipos de dados</h2>
+            <ul>
+                <li>
+                    <h2>Strings</h2>
+                    <p> # string ou caractere (str): A string é todo texto delimitado por aspas, sejam elas simples ('')
+                        ou duplas (""). Seja lá o que for, desde que esteja entre aspas então é uma string. Vamos ver
+                        alguns exemplos:
+                    </p>
+                </li>
+            </ul>
 
-            # int ou inteiros (int): O int é responsável por números inteiros e sem casa decimal (números após a
-            vírgula), sejam eles positivos ou negativos. Exemplos:
-            idade = 14
-            pontos = 560
-            alunos = 35
+            <div class="example-code-container">
+                <div class="example-code-header">
+                    <div class="dots">
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
+                    </div>
+                    <span>strings.py</span>
+                </div>
+                <pre
+                    class="example-pre"><code>nome = 'Lucas'<br>estado = "São Paulo"<br>continente = 'América'<br>print(nome)<br>print(estado)<br>print(continente)</code></pre>
+                <div class="example-output-container">
+                    <div class="example-output-header">Saída:</div>
+                    <div class="output">Lucas<br>São Paulo<br>América</div>
+                </div>
+            </div>
+
+            <ul>
+                <li>
+                    <h2>Int</h2>
+                    <p>int ou inteiros (int): O int é responsável por números inteiros e sem casa decimal (números após
+                        a vírgula), sejam eles positivos ou negativos. Exemplos:</p>
+                </li>
+            </ul>
+
+            <div class="example-code-container">
+                <div class="example-code-header">
+                    <div class="dots">
+                        <div class="dot red"></div>
+                        <div class="dot yellow"></div>
+                        <div class="dot green"></div>
+                    </div>
+                    <span>int.py</span>
+                </div>
+                <pre
+                    class="example-pre"><code>idade = 14<br>pontos = 560<br>alunos = 35<br>print(idade)<br>print(pontos)<br>print(alunos)</code></pre>
+                <div class="example-output-container">
+                    <div class="example-output-header">Saída:</div>
+                    <div class="output">14<br>560<br>35</div>
+                </div>
+            </div>
+
+
+
 
             # float ou flutuantes/decimais (float): Os decimais são todos os números positivos ou negativos que
             possuem casas decimais (números após a vírgula). Vamos ver:
